ghc-4335c07/testsuite/tests/typecheck/should_compile/T10072.hs
module T0072 where
{-# RULES
"map/empty" forall (f :: a -> _). map f [] = []
  #-}
