ghc-4335c07/testsuite/tests/typecheck/should_fail/Tcfail186_Help.hs
module Tcfail186_Help where

type PhantomSyn a  = Int

f = (\_ -> 2) :: PhantomSyn a -> Int
